methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:96: error: not found: value doite
  doite();
  ^